<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ab_battery_low">The update will be installed automatically when the battery is charged to more than %1$d%%</string>
    <string name="ab_connect_fail">Connect reboot fail</string>
    <string name="ab_install_fail">Install fail</string>
    <string name="ab_install_success">Install successfully</string>
    <string name="ab_installing">Installing</string>
    <string name="ab_install_fail_reason">Reason：</string>
    <string name="ab_parms_illegal">Incorrect upgrade package parameter</string>
    <string name="ab_reboot_now">Restart immediately</string>
    <string name="about_wireless_update">About Wireless Update</string>
    <string name="app_name">Wireless Update</string>
    <string name="battery_remove_title">Warning</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_download">Download</string>
    <string name="btn_ok">OK</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_resume">Resume</string>
    <string name="button_click_toast">Click too fast, Please try again later.</string>
    <string name="cancel_download_content">This operation will delete the downloaded file.</string>
    <string name="cancel_download_negative_btn">No</string>
    <string name="cancel_download_positive_btn">Yes</string>
    <string name="cancel_download_title">Cancel</string>
    <string name="check_now">Check for updates</string>
    <string name="current_version_text">Current:</string>
    <string name="download_completed_text">Download complete, please click to install</string>
    <string name="download_progress">Progress:</string>
    <string name="empty_directory">No zip files in this folder!</string>
    <string name="export_data">Download log file</string>
    <string name="feedback_incorrect_pattern">Please enter the correct number of the device!</string>
    <string name="feedback_personal_contacts">Mail address/ phone number</string>
    <string name="feedback_personal_feedback">Having problems updating? Let us know.</string>
    <string name="feedback_picture_change_content">Need to replace the picture?</string>
    <string name="feedback_problem_screenshot">screenshot</string>
    <string name="feedback_submit">Send</string>
    <string name="feedback_submit_less_content">Please input more than four characters</string>
    <string name="feedback_submit_no_content">Submission is not completed, please fill in all fields!</string>
    <string name="feedback_tip">4-200</string>
    <string name="feedback_title">Feedback</string>
    <string name="htmlstring_code_end">&lt;/span&gt;&lt;br/&gt;&lt;/div&gt;</string>
    <string name="htmlstring_code_head">&lt;div style=\'font-size:14px;color:#8e8e8e;\'&gt;&lt;span style=\'word-break:break-all\'&gt;</string>
    <string name="htmlstring_version">&lt;div style=\'font-size:16px;color:#303030;\'&gt;&lt;span style=\'word-break:break-all\'&gt;</string>
    <string name="htmlstring_version_end">&lt;/span&gt;&lt;br/&gt;</string>
    <string name="inner_sdcard">Internal storage</string>
    <string name="match_imei">IMEI is illegal</string>
    <string name="network_error">Network connection failed</string>
    <string name="new_version_query">Checking for updates...</string>
    <string name="new_version_text">New version</string>
    <string name="no_new_version">Your device\'s software is currently up to date.</string>
    <string name="not_support_fota_title">Warning</string>
    <string name="not_support_version">Wireless Updates are not supported on this device! If you think this is a mistake contact your device maker.</string>
    <string name="notification_content_newversion">A new version is available.</string>
    <string name="notification_content_title">Wireless Software Update</string>
    <string name="option_exit">Exit</string>
    <string name="option_file_select">Local updates</string>
    <string name="option_settings">Settings</string>
    <string name="ota_battery_low">The battery has less than %1$d%%, please charge the device up to at least %2$d%%!</string>
    <string name="ota_button_text_know">Ok</string>
    <string name="ota_device_rooted_content">Root has been detected, can not update the device!</string>
    <string name="ota_dialog_feedback_fail">Upload failed, please retry!</string>
    <string name="ota_dialog_feedback_loading_label">Please wait...</string>
    <string name="ota_dialog_feedback_success">Upload succeeded !</string>
    <string name="ota_full_rom_check">Check</string>
    <string name="ota_no_wifi_tip">Wi-Fi is not available now, would you like to download update via mobile data?</string>
    <string name="ota_notify_download_pause_content">Download has been paused, click to continue</string>
    <string name="ota_optional_full_check">Check for full update</string>
    <string name="ota_toast_no_network">Network is not available</string>
    <string name="ota_wifi_setting">Wi-Fi Settings</string>
    <string name="out_sdcard">SD card</string>
    <string name="package_error_message_invalid">Invald Update package. Please check update and download again.</string>
    <string name="package_error_title">Installation Failed</string>
    <string name="package_unzip">Unzipping the package file, please do not turn of your device...</string>
    <string name="package_unzip_error">Unzip error</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pop_install_remind_content">A new version has been downloaded and is ready to install.</string>
    <string name="pop_install_remind_title">Update Reminder</string>
    <string name="pop_install_schedule1">1 hour later</string>
    <string name="pop_install_schedule2">4 hours later</string>
    <string name="pop_install_schedule3">8 hours later</string>
    <string name="post_pro">%</string>
    <string name="reboot">Rebooting...</string>
    <string name="remind_last_time">Remind me later</string>
    <string name="sdCard_update_tips_content">&lt;div style=font-size:13px;color:#4c4c4c&gt;&lt;p&gt;1. Please make sure the selected file is official;&lt;/p&gt; &lt;p&gt;2. Local Update may wipe your data, please backup before updating;&lt;/p&gt; &lt;p&gt;3. Install the wrong update file will damage your device;&lt;/p&gt; &lt;p&gt;4. Click [Update now] button, your device will enter into the Recovery Mode. Please do not remove the battery and do nothing until the update has been completed.&lt;/p&gt;&lt;/div&gt;</string>
    <string name="sdCard_upgrade_copy_file_fail">Copy failed</string>
    <string name="sdCard_upgrade_copy_file_fail_prompt">Copy failed, please try again!</string>
    <string name="sdCard_upgrade_copying">Copying...</string>
    <string name="sdCard_upgrade_find_update_file_fail">No update files available</string>
    <string name="sdCard_upgrade_hint">Notice:</string>
    <string name="sdCard_upgrade_memory_space_not_enough">Error</string>
    <string name="sdCard_upgrade_update_file_fail_prompt">Update file is not existing, please select again.</string>
    <string name="sdcard_crash_dir_un_build">The SDCard is not available!</string>
    <string name="sdcard_crash_or_unmount">There is no SD card present, or there is not enough free space on device to complete the update.</string>
    <string name="sdcard_update_prompt">Your device can be bricked if you choose to install an unofficial or incompatible zip file!</string>
    <string name="selected_update_zip">Selected file: </string>
    <string name="setting_autocheck">Automatically check for updates</string>
    <string name="setting_autocheck_hint">Set the frequency to check for update automatically</string>
    <string name="setting_autocheck_schedule1">Daily</string>
    <string name="setting_autocheck_schedule2">Every 3 days</string>
    <string name="setting_autocheck_schedule3">Weekly</string>
    <string name="setting_autocheck_title">Automatic update check frequency</string>
    <string name="setting_autodownload">Allow automatic download over Wi-Fi network</string>
    <string name="setting_autodownload_hint">Update packages will be downloaded automatically</string>
    <string name="setting_network_tip">No Wi-Fi connection available, please deselect the [Updates via Wi-Fi only] option and try again.</string>
    <string name="setting_only_wifi">Updates via Wi-Fi only</string>
    <string name="setting_only_wifi_hint">Download updates over Wi-Fi only</string>
    <string name="start_catch_log">Start log capture</string>
    <string name="stop_catch_log">End log capture</string>
    <string name="tips_abDownOrInstall">In the downloading upgrade, do not upgrade locally at the same time</string>
    <string name="tips_abInstall">In the installation, please do not check the full package.</string>
    <string name="unmount_sdcard">SD card error! Please ensure the SD Card is mounted.</string>
    <string name="updateSuccess">Your system has been updated to latest version successfully %s</string>
    <string name="updateSuccessTitle">Installation Complete</string>
    <string name="update_later">Install later</string>
    <string name="update_now">Install now</string>
    <string name="update_prompt">The software update process will take a few minutes. Please refrain from excessive operations during the update and make sure your device is plugged into a power source or has more than 30% charge.</string>
    <string name="updated_need_reboot">Restart the cell phone to activate the updated version</string>
    <string name="upgrade_hint">Update Information</string>
</resources>
