<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/button_export_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_data"/>
    <Button
        android:id="@+id/button_start_debug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_catch_log"/>
    <Button
        android:id="@+id/button_stop_debug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_catch_log"/>
</LinearLayout>
