<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@mipmap/popup_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/pop_file_select"
        style="@style/AppUIStyle.PopItemStyle">
        <ImageView
            android:layout_gravity="center_vertical"
            android:background="@mipmap/option_file_select_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/option_file_select"
            style="@style/AppUIStyle.PopItemTxtStyle"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/pop_full_check"
        android:visibility="gone"
        style="@style/AppUIStyle.PopItemStyle">
        <ImageView
            android:layout_gravity="center_vertical"
            android:background="@mipmap/pop_full_rom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/ota_optional_full_check"
            style="@style/AppUIStyle.PopItemTxtStyle"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/pop_setting"
        style="@style/AppUIStyle.PopItemStyle">
        <ImageView
            android:layout_gravity="center_vertical"
            android:background="@mipmap/option_setting_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/option_settings"
            style="@style/AppUIStyle.PopItemTxtStyle"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/pop_exit"
        style="@style/AppUIStyle.PopItemStyle">
        <ImageView
            android:layout_gravity="center_vertical"
            android:background="@mipmap/pop_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/option_exit"
            style="@style/AppUIStyle.PopItemTxtStyle"/>
    </LinearLayout>
</LinearLayout>
