<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:background="@color/white_color"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/bt_check"
        android:text="@string/check_now"
        style="@style/AppUIStyle.Button"/>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/hl_bt_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="-0.5dp">
            <TextView
                android:textSize="@dimen/bottom_button_text_size"
                android:textColor="@drawable/button_text_color_selector"
                android:gravity="center"
                android:id="@+id/button_left"
                android:background="@drawable/button_left_selector"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_button_height"
                android:text="@string/btn_pause"
                android:singleLine="true"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:textSize="@dimen/bottom_button_text_size"
                android:textColor="@drawable/button_text_color_selector"
                android:gravity="center"
                android:id="@+id/button_right"
                android:background="@drawable/button_right_selector"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_button_height"
                android:text="@string/btn_cancel"
                android:singleLine="true"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
