<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white_color"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/title_layout"
        layout="@layout/activity_common_title"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/setting_auto_check_layout"
            android:background="@drawable/setting_item_selector"
            android:clickable="true"
            style="@style/AppUIStyle.SettingItemStyle">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/auto_check_schedule"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true">
                <TextView
                    android:textSize="@dimen/common_item_text_size"
                    android:textColor="@color/theme_text_primary_color"
                    android:id="@+id/auto_check_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_autocheck"/>
                <TextView
                    android:textSize="@dimen/common_item_hint_text_size"
                    android:textColor="@color/theme_text_dark_color"
                    android:paddingTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_autocheck_hint"
                    android:layout_below="@+id/auto_check_title"/>
            </RelativeLayout>
            <TextView
                android:textSize="@dimen/new_version_hint_size"
                android:textColor="@color/theme_title_bg_color"
                android:id="@+id/auto_check_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:text="@string/setting_autocheck_schedule1"
                android:layout_toLeftOf="@+id/auto_check_arrow"
                android:layout_centerVertical="true"/>
            <ImageView
                android:id="@+id/auto_check_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:src="@mipmap/right_arrow"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <ImageView
            android:background="@drawable/horizontal_line_color"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
        <RelativeLayout
            android:id="@+id/setting_wifi_layout"
            android:background="@drawable/setting_item_selector"
            android:clickable="true"
            style="@style/AppUIStyle.SettingItemStyle">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/wifi_checkbox"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true">
                <TextView
                    android:textSize="@dimen/common_item_text_size"
                    android:textColor="@color/theme_text_primary_color"
                    android:id="@+id/wifi_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_only_wifi"/>
                <TextView
                    android:textSize="@dimen/common_item_hint_text_size"
                    android:textColor="@color/theme_text_dark_color"
                    android:paddingTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_only_wifi_hint"
                    android:layout_below="@+id/wifi_title"/>
            </RelativeLayout>
            <CheckBox
                android:id="@+id/wifi_checkbox"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:button="@drawable/checkbox_selector"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <ImageView
            android:background="@drawable/horizontal_line_color"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
        <RelativeLayout
            android:id="@+id/setting_auto_download_layout"
            android:background="@drawable/setting_item_selector"
            android:clickable="true"
            style="@style/AppUIStyle.SettingItemStyle">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/auto_download_checkbox"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true">
                <TextView
                    android:textSize="@dimen/common_item_text_size"
                    android:textColor="@color/theme_text_primary_color"
                    android:id="@+id/auto_download_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_autodownload"/>
                <TextView
                    android:textSize="@dimen/common_item_hint_text_size"
                    android:textColor="@color/theme_text_dark_color"
                    android:paddingTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_autodownload_hint"
                    android:layout_below="@+id/auto_download_title"/>
            </RelativeLayout>
            <CheckBox
                android:id="@+id/auto_download_checkbox"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:button="@drawable/checkbox_selector"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <ImageView
            android:background="@drawable/horizontal_line_color"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
        <RelativeLayout
            android:id="@+id/setting_logging_layout"
            android:background="@drawable/setting_item_selector"
            android:clickable="true"
            style="@style/AppUIStyle.SettingItemStyle">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/logging_checkbox"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true">
                <TextView
                    android:textSize="@dimen/common_item_text_size"
                    android:textColor="@color/theme_text_primary_color"
                    android:id="@+id/logging_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Enable Logging"/>
                <TextView
                    android:textSize="@dimen/common_item_hint_text_size"
                    android:textColor="@color/theme_text_dark_color"
                    android:paddingTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Enable debug logs to be output to logcat"
                    android:layout_below="@+id/logging_title"/>
            </RelativeLayout>
            <CheckBox
                android:id="@+id/logging_checkbox"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:button="@drawable/checkbox_selector"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <ImageView
            android:background="@drawable/horizontal_line_color"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
        <com.foss.fota.view.TitleContentView
            android:id="@+id/about"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/about_wireless_update"/>
    </LinearLayout>
</LinearLayout>
